--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -7,6 +7,8 @@
     <title>Login – Tiffin Service</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
@@ -158,6 +160,21 @@
 <div class="login-page-wrapper">
     <div class="form-area">
         <div class="login-container">
+            {% if messages %}
+               <script>
+                   {% for message in messages %}
+                   Toastify({
+                     text: "{{ message }}" ,
+                     className: "info",
+                     position: "right",
+                     gravity: "top",
+                     style: {
+                       background: "linear-gradient(to left, black, chocolate)",
+                     }
+                   }).showToast();
+                   {% endfor %}
+               </script>
+             {% endif %}
             <h1>Login</h1>
             <p class="subtitle">Welcome back! Please enter your details.</p>
 
