--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up - Tiffin Service</title>
-
+ <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -139,7 +140,21 @@
 <body>
 
 <div class="signup-container">
-
+ {% if messages %}
+               <script>
+                   {% for message in messages %}
+                   Toastify({
+                     text: "{{ message }}" ,
+                     className: "info",
+                     position: "right",
+                     gravity: "top",
+                     style: {
+                       background: "linear-gradient(to left, black, chocolate)",
+                     }
+                   }).showToast();
+                   {% endfor %}
+               </script>
+             {% endif %}
   <!-- LEFT FORM -->
   <div class="form-section">
     <h2>Create Account</h2>
