change database and design

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -175,6 +175,11 @@
                    {% endfor %}
                </script>
              {% endif %}
+             <a href="{% url 'home' %}" style="text-decoration: none; display: flex; align-items: center; ">
+        <i class="fas fa-arrow-left" style="margin-right: 8px;"></i> Back to Home
+     </a>
+             <div style="height: 20px;"></div>
+
             <h1>Login</h1>
             <p class="subtitle">Welcome back! Please enter your details.</p>
 
